--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
       integrity="sha256-WAgYcAck1C1/zEl5sBl5cfyhxtLgKGdpI3oKyJffVRI="
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <h1 class="title">Todo List</h1>
@@ -22,6 +22,6 @@
       </div>
       <ul class="list"></ul>
     </main>
-    <script src="src/scripts/index.js" type="module"></script>
+    <script src="./scripts/index.js" type="module"></script>
   </body>
 </html>
